[package]
name = "litdsp"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers = {path = "../litcontainers/litcontainers"}
litaudio = {path = "../litaudio"}
num-traits = "0.2"
fftw = "0.6.0"
itertools = "0.8.0"
rayon = "1.1.0"
typenum = "1.10.0"


[dev-dependencies]
litaudioio = {path = "../litaudioio"}
criterion = "0.2"

[[bench]]
name = "comparison_bench"
harness = false